[gd_scene load_steps=18 format=2]

[ext_resource path="res://Assets/shapes/Shapes_finalized/shape_0.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Stages/Scripts/Final Touch.gd" type="Script" id=2]
[ext_resource path="res://Assets/ButtonsOutline/ok.png" type="Texture" id=3]
[ext_resource path="res://Assets/ButtonsOutline/right.png" type="Texture" id=6]
[ext_resource path="res://Assets/ButtonsOutline/left.png" type="Texture" id=10]

[sub_resource type="Gradient" id=13]
offsets = PoolRealArray( 0, 0.435583, 1 )
colors = PoolColorArray( 0, 0, 0, 1, 0.113487, 0.20756, 0.854492, 1, 1, 1, 1, 1 )

[sub_resource type="GradientTexture2D" id=14]
gradient = SubResource( 13 )

[sub_resource type="StyleBoxFlat" id=20]
bg_color = Color( 0, 0.403922, 0.72549, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.8, 0.8, 0.8, 0 )
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxFlat" id=21]
bg_color = Color( 0, 0.74902, 0.662745, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.8, 0.8, 0.8, 0 )
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0, 0.396078, 1, 0.392157 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.8, 0.8, 0.8, 0 )
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 0, 0.403922, 0.72549, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.8, 0.8, 0.8, 0 )
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxFlat" id=17]
bg_color = Color( 0, 0.74902, 0.662745, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.8, 0.8, 0.8, 0 )
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxFlat" id=19]
bg_color = Color( 0, 0.396078, 1, 0.392157 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.8, 0.8, 0.8, 0 )
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxFlat" id=22]
bg_color = Color( 0, 0.403922, 0.72549, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.8, 0.8, 0.8, 0 )
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxFlat" id=23]
bg_color = Color( 0, 0.74902, 0.662745, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.8, 0.8, 0.8, 0 )
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxFlat" id=24]
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0, 0, 0, 1 )
border_blend = true
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxFlat" id=25]
bg_color = Color( 0, 0.396078, 1, 0.392157 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.8, 0.8, 0.8, 0 )
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[node name="Final Touch" type="Node2D" groups=["deletable"]]
script = ExtResource( 2 )
__meta__ = {
"_edit_horizontal_guides_": [ -32.0, -156.0 ],
"_edit_vertical_guides_": [ -34.0 ]
}

[node name="ColorRect6" type="ColorRect" parent="."]
margin_left = 102.0
margin_top = -289.0
margin_right = 531.0
margin_bottom = 60.0
color = Color( 0, 0, 0, 1 )

[node name="Haircut1" type="Sprite" parent="."]
position = Vector2( -75, -211 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 1 )

[node name="ColorSelector" type="ColorPicker" parent="."]
margin_left = 265.0
margin_top = -259.0
margin_right = 583.0
margin_bottom = 152.0
rect_scale = Vector2( 0.8, 0.8 )
custom_icons/preset_bg = SubResource( 14 )
alignment = 1
edit_alpha = false
presets_enabled = false
presets_visible = false

[node name="Finish_client" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 100.0
margin_top = -45.0
margin_right = 531.0
margin_bottom = 84.0
color = Color( 0, 0, 0, 1 )

[node name="ColorRect2" type="ColorRect" parent="."]
margin_left = 100.0
margin_top = -288.0
margin_right = 261.0
margin_bottom = 60.0
color = Color( 0, 0, 0, 1 )

[node name="ColorRect3" type="ColorRect" parent="."]
margin_left = 100.0
margin_top = -288.0
margin_right = 531.0
margin_bottom = -263.0
color = Color( 0, 0, 0, 1 )

[node name="ColorRect4" type="ColorRect" parent="."]
margin_left = 485.0
margin_top = -58.0
margin_right = 531.0
margin_bottom = -38.0
color = Color( 0, 0, 0, 1 )

[node name="ColorRect5" type="ColorRect" parent="."]
margin_left = 509.0
margin_top = -288.0
margin_right = 531.0
margin_bottom = -17.0
color = Color( 0, 0, 0, 1 )

[node name="Direita" type="Button" parent="."]
margin_left = 149.0
margin_top = -229.0
margin_right = 213.0
margin_bottom = -165.0
custom_styles/hover = SubResource( 20 )
custom_styles/pressed = SubResource( 21 )
custom_styles/normal = SubResource( 15 )

[node name="TurnRight" type="Sprite" parent="Direita"]
position = Vector2( 31, 32 )
texture = ExtResource( 6 )

[node name="Esquerda" type="Button" parent="."]
margin_left = 149.0
margin_top = -156.0
margin_right = 213.0
margin_bottom = -92.0
custom_styles/hover = SubResource( 16 )
custom_styles/pressed = SubResource( 17 )
custom_styles/normal = SubResource( 19 )

[node name="Left" type="Sprite" parent="Esquerda"]
position = Vector2( 32, 34 )
texture = ExtResource( 10 )

[node name="Confirm" type="Button" parent="."]
margin_left = 341.0
margin_top = -21.0
margin_right = 373.0
margin_bottom = 11.0
rect_scale = Vector2( 2, 2 )
custom_styles/hover = SubResource( 22 )
custom_styles/pressed = SubResource( 23 )
custom_styles/disabled = SubResource( 24 )
custom_styles/normal = SubResource( 25 )

[node name="Ok" type="Sprite" parent="Confirm"]
position = Vector2( 16, 16 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[connection signal="timeout" from="Finish_client" to="." method="_on_Finish_client_timeout"]
[connection signal="pressed" from="Direita" to="." method="_on_Direita_pressed"]
[connection signal="pressed" from="Esquerda" to="." method="_on_Esquerda_pressed"]
[connection signal="pressed" from="Confirm" to="." method="_on_Confirm_pressed"]
